Java 13 features evaluation